[project]
name = "ablm-eval"
version = "0.0.0"
authors = [{name = "Sarah Burbach"}]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ablm_eval*"]

[tool.setuptools.package-data]
"ablm_eval.tasks.classification" = ["*.yaml"]